# ann

./: .gitignore  Makefile  ann.opam  build.js  dune  dune-project  elm.json  ipsom  ipsum.json  package-lock.json  package.json
client/: Interface.elm  Main.elm  index.js
src/: dune  main.eml.ml  main.ml
static/: index.css  index.js
